--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ crate-type = ["cdylib"]
 js-sys = "0.3.47"
 wasm-bindgen = "0.2.70"
 
+[dependencies.rand]
+version = "0.7"
+features = ["wasm-bindgen"]
+
 [dependencies.web-sys]
 version = "0.3.4"
 features = [
