wrap distance-slider in div

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,15 +18,16 @@ features = ["wasm-bindgen"]
 [dependencies.web-sys]
 version = "0.3.4"
 features = [
+  'console',
   'CanvasRenderingContext2d',
   'Document',
   'Element',
-  'HtmlCanvasElement',
-  'Window',
-  'console',
-  'HtmlButtonElement',
   'EventListener',
-  'HtmlParagraphElement',
+  'HtmlBrElement',
+  'HtmlButtonElement',
+  'HtmlCanvasElement',
+  'HtmlDivElement',
   'HtmlInputElement',
-  'HtmlBrElement'
+  'HtmlParagraphElement',
+  'Window',
 ]
