--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 [dependencies]
 js-sys = "0.3.47"
 wasm-bindgen = "0.2.70"
+hsl = "0.1.1"
 
 [dependencies.rand]
 version = "0.7"
