--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ features = [
   'HtmlCanvasElement',
   'HtmlDivElement',
   'HtmlInputElement',
+  'HtmlLabelElement',
   'HtmlParagraphElement',
   'Window',
 ]
